# session-continue

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  agent_api.py  embed.py  i18n.py  install.sh  keepalive.py  models.py  observe.py  pickup.py  pyproject.toml  sc.py  scan_claude.py  scan_codex.py  scan_common.py  scan_cursor.py  scan_kimi.py  scan_opencode.py  selftest.sh  setup.cfg  test_agent_api.py  test_embed.py  test_i18n.py  test_keepalive.py  test_observe.py  test_runtime.py  test_session_scanning.py  test_titlegen.py  test_ui.py  titlegen.py  titles.py
.cursor/rules/: release-after-changes.mdc
.github/workflows/: release.yml  test.yml
docs/: CROSS_RUNTIME_HANDOFF_KNOWLEDGE_BASE.md  EMBEDDED_TERMINAL_KNOWLEDGE_BASE.md  MAINTAINER_GUIDE.md  NEW_RUNTIME_ONBOARDING_KNOWLEDGE_BASE.md  OBSERVABILITY_KNOWLEDGE_BASE.md  PERFORMANCE_KNOWLEDGE_BASE.md  SESSION_SCANNING_KNOWLEDGE_BASE.md  SKILL.md  TERMINAL_UI_KNOWLEDGE_BASE.md
docs/plans/: 2026-07-16-title-generator-abstraction.md
docs/screenshots/: capture.py
docs/superpowers/plans/: 2026-07-19-tui-observability.md  2026-07-23-readme-screenshot-fidelity.md
docs/superpowers/specs/: 2026-07-19-sidebar-polish-design.md  2026-07-23-readme-screenshot-fidelity-design.md
runtime/: __init__.py  base.py  claude.py  codex.py  cursor.py  kimi.py  opencode.py  registry.py
rust/: lib.rs
scripts/: benchmark.py  dev-install.sh
src/pickup/: __init__.py  __main__.py  agent_api.py  bootstrap.py  cache.py  cache_cli.py  cli.py  display.py  embed.py  i18n.py  keepalive.py  native.py  observe.py  projects.py  split_layout.py  store.py  theme.py  titlegen.py  titles.py  updater.py
src/pickup/runtime/: __init__.py  base.py  claude.py  codex.py  cursor.py  kimi.py  opencode.py  registry.py
src/pickup/scan/: __init__.py  claude.py  codex.py  common.py  cursor.py  kimi.py  opencode.py
src/pickup/ui/: __init__.py  app.py  embed_pane.py  main_screen.py  modals.py  nav.py  runtime_top_bar.py  session_list.py  split_pane_area.py  update_toast.py
tests/: test_agent_api.py  test_cache.py  test_cli_options.py  test_cli_restart.py  test_embed.py  test_i18n.py  test_keepalive.py  test_main_screen_update.py  test_observe.py  test_projects.py  test_runtime.py  test_session_scanning.py  test_split_layout.py  test_titlegen.py  test_ui.py  test_update_toast.py  test_updater.py
ui/: __init__.py  app.py  embed_pane.py  main_screen.py  modals.py  nav.py  preview_screen.py  session_list.py
