[package]
name = "pickup-native"
version = "0.24.2"
edition = "2021"
description = "Native hot-path accelerator for pickup"
homepage = "https://github.com/x0c/pickup"
repository = "https://github.com/x0c/pickup"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
serde_json = "1.0"
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
