[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pickup"
version = "0.16.3"
description = "Terminal session picker and handoff tool for Claude Code, Codex CLI, OpenCode, and Kimi Code CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pickup contributors" }]
keywords = [
  "claude-code",
  "codex-cli",
  "opencode",
  "kimi-code",
  "terminal",
  "tui",
  "session-manager",
  "ai-coding-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/x0c/pickup"
Issues = "https://github.com/x0c/pickup/issues"

[project.scripts]
pickup = "pickup:main"

[tool.setuptools]
py-modules = ["models", "pickup", "agent_api", "scan_claude", "scan_codex", "scan_opencode", "scan_kimi", "scan_common", "titles", "titlegen", "keepalive", "embed"]
packages = ["runtime"]
