[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "pickup"
version = "0.24.9"
description = "Terminal session picker and handoff tool for Claude Code, Codex CLI, OpenCode, Kimi Code CLI, and Cursor Agent CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pickup contributors" }]
keywords = [
  "claude-code",
  "codex-cli",
  "opencode",
  "kimi-code",
  "cursor-cli",
  "terminal",
  "tui",
  "session-manager",
  "ai-coding-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = ["textual>=8.0"]

[project.urls]
Homepage = "https://github.com/x0c/pickup"
Issues = "https://github.com/x0c/pickup/issues"

[project.scripts]
pickup = "pickup.bootstrap:main"

[tool.maturin]
python-source = "src"
module-name = "pickup._native"
features = ["pyo3/abi3-py310"]
