[metadata]
name = session-continue
version = 0.7.0
description = Terminal session picker and handoff tool for Claude Code and Codex CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = session-continue contributors
url = https://github.com/x0c/session-continue
project_urls =
    Issues = https://github.com/x0c/session-continue/issues
keywords =
    claude-code
    codex-cli
    terminal
    tui
    session-manager
    ai-coding-agent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development
    Topic :: Terminals

[options]
python_requires = >=3.10
py_modules =
    models
    sc
    agent_api
    scan_claude
    scan_codex
    titles
packages =
    runtime
install_requires =

[options.entry_points]
console_scripts =
    sc = sc:main
