[metadata]
name = pickup
version = 0.17.7
description = Terminal session picker and handoff tool for Claude Code, Codex CLI, OpenCode, and Kimi Code CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = pickup contributors
url = https://github.com/x0c/pickup
project_urls =
    Issues = https://github.com/x0c/pickup/issues
keywords =
    claude-code
    codex-cli
    opencode
    kimi-code
    terminal
    tui
    session-manager
    ai-coding-agent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development
    Topic :: Terminals

[options]
python_requires = >=3.10
py_modules =
    models
    pickup
    agent_api
    scan_claude
    scan_codex
    scan_opencode
    scan_kimi
    scan_common
    titles
    titlegen
    keepalive
    embed
packages =
    runtime
    ui
install_requires =
    textual>=8.0

[options.entry_points]
console_scripts =
    pickup = pickup:main
